--- a/client/apps/style.scss
+++ b/client/apps/style.scss
@@ -21,6 +21,12 @@
     background-color: $sd-background;
 }
 
+.side-panel__header {
+    .side-panel__header-inner {
+        width: 100%;
+    }
+}
+
 .side-panel__content {
     overflow-wrap: break-word;
 
