--- a/client/components/UI/Form/DateInput/style.scss
+++ b/client/components/UI/Form/DateInput/style.scss
@@ -2,7 +2,7 @@
 @import '~superdesk-ui-framework/app/styles/_variables.scss';
 
 .date-popup {
-    width: 260px;
+    width: 280px !important;
 
     &__header {
         width: 100%;
@@ -11,6 +11,7 @@
     &__header-row {
         display: flex;
         flex-direction: row;
+        gap: $sd-base-increment / 2;
 
         .btn {
             flex: 1;
@@ -69,23 +70,28 @@
                         min-height: 28px !important;
                         padding: 0;
                         background: none;
-                        color: #333;
-                        @include box-shadow(0, 0, 0, 0, rgba(0,0,0,.25));
+                        color: var(--color-text) !important;
+                        box-shadow: 0 0 0 0  hsla(0, 0%, 0%, 0.25);
                         .text-muted {
-                            color: #999;
+                            color: var(--color-text-lighter);
                         }
-                        &:hover, &.active {
-                            color: #333;
-                            @include box-shadow(0, 0, 1px, 0, $sd-blue, true);
-                            background: $sd-hover;
+                        &:hover {
+                            color: var(--color-text);
+                            box-shadow: 0 0 0 1px var(--sd-colour-interactive) !important;
+                            background: transparent !important;
+                        }
+                        &.active {
+                            color: hsl(0, 0%, 100%) !important;
+                            box-shadow: none !important;
+                            background: var(--sd-colour-interactive--alpha-70) !important;
                         }
 
                         &.btn--primary, &.btn--primary.active {
                             //selected date
-                            color: #fff;
-                            background: $sd-blue;
+                            color: hsl(0, 0%, 100%) !important;
+                            background: var(--sd-colour-interactive) !important;
                             .text-muted {
-                                color: #fff;
+                                color: hsl(0, 0%, 100%);
                             }
                         }
 
