--- a/client/components/UI/Form/TimeInput/style.scss
+++ b/client/components/UI/Form/TimeInput/style.scss
@@ -2,7 +2,7 @@
 @import '~superdesk-ui-framework/app/styles/_variables.scss';
 
 .time-popup {
-    width: 200px;
+    width: 220px;
 
     &__header-row {
         display: flex;
@@ -15,21 +15,15 @@
         }
     }
 
-    &__footer {
-        .btn {
-            height: 28px;
-        }
-    }
-
     &__select-area {
         margin-top: 15px;
-        border-top: 1px solid #ddd;
+        border-top: 1px solid var(--sd-colour-line--light) !important;
         .header {
             margin-top: -10px;
             float: left;
-            background: $white;
+            background: var(--color-dropdown-menu-Bg) !important;
             text-transform: uppercase;
-            color: #adadad;
+            color: var(--color-text-lighter) !important;
             font-size: 11px;
             padding-right: 10px;
         }
@@ -38,20 +32,20 @@
             @include clearfix();
             > li {
                 float: left;
-                @include border-box();
                 width: 28px;
                 height: 28px;
                 line-height: 28px;
                 text-align: center;
                 margin: 0 2px 2px 0;
-                @include border-radius(2px);
+                border-radius: 2px;
                 &:hover {
-                    background: $sd-hover;
+                    background: transparent !important;
+                    box-shadow: 0 0 0 1px var(--sd-colour-interactive) !important;
                     cursor: pointer;
                 }
                 &.active {
-                    background: $sd-blue;
-                    color: $white;
+                    background: var(--sd-colour-interactive--alpha-70) !important;
+                    color: $white !important;
                 }
             }
         }
