--- a/client/components/UI/Popup/style.scss
+++ b/client/components/UI/Popup/style.scss
@@ -9,9 +9,9 @@
         padding-top: 1rem;
         margin: 0;
         background-color: $dropdownBackground;
-        box-shadow: 0 2px 10px rgba(0, 0, 0, .4), 0 3px 1px -2px rgba(0, 0, 0, .1);
+        box-shadow: 0 2px 10px hsla(0, 0%, 0%, 0.4), 0 3px 1px -2px hsla(0, 0%, 0%, 0.1);
         border-radius: 2px;
-        text-align: left;
+        text-align: start;
 
         &--no-padding {
             padding: 0 !important;
@@ -22,7 +22,7 @@
         height: 1px;
         margin: 0.8rem 0;
         overflow: hidden;
-        background-color: #e5e5e5;
+        background-color: var(--sd-colour-line--light);
     }
 
     &__menu-label {
@@ -61,12 +61,12 @@
     &__menu-header {
         font-weight: 300;
         font-size: 1.5rem;
-        color: $grayLight;
+        color: var(--color-text-light);
         padding: 1rem 1rem 0 1rem;
-        border-bottom: 1px solid #e5e5e5;
+        border-bottom: 1px solid var(--sd-colour-line--light) !important;
 
         &--no-border {
-            border-bottom: none;
+            border-bottom: none !important;
         }
 
         &--no-padding {
@@ -77,8 +77,11 @@
     &__menu-footer {
         padding: 1rem;
         margin-top: 0.6rem;
-        border-top: 1px solid #e5e5e5;
-        display: inline-block;
+        border-top: 1px solid var(--sd-colour-line--light) !important;
+        display: flex !important;
+        align-items: center;
+        justify-content: flex-end;
+        gap: (--gap--small);
         width: 100%;
 
         &--no-border {
