--- a/client/components/UI/style.scss
+++ b/client/components/UI/style.scss
@@ -102,14 +102,21 @@ time.Datetime {
     }
 }
 
-.sd-collapse-box--autoFocus {
-    &:focus {
-        background-color: #f4f4f4;
-    }
-}
+// .sd-collapse-box--autoFocus {
+//     &:focus {
+//         outline: 1px solid var(--sd-colour-interactive);
+
+//     }
+// }
 
 .sd-collapse-box {
-    @extend .sd-collapse-box--autoFocus
+    &:focus-visible {
+        outline: 1px solid var(--sd-colour-interactive);
+    }
+    &:focus {
+        outline: 1px solid var(--sd-colour-interactive) !important;
+        background-color: transparent !important;
+    }
 }
 
 .sd-collapse-box__content-wrapper--no-max-height {
@@ -167,7 +174,7 @@ time.Datetime {
         grid-column: 1/2;
         grid-row: 1/2;
         overflow-y: auto;
-        background-color: var(--color-bg-50);
+        background-color: var(--sd-colour-quickbar-menu);
         padding-top: 1.6rem !important;
     }
 
@@ -234,4 +241,19 @@ textarea.sd-line-input__input {
 // nested list item view
 .sd-list-item-group .sd-list-item-nested {
     margin-top: 0;
+}
+
+.sd-list-item__row {
+    .sd-list-item--element-grow {
+        display: flex;
+        align-items: center;
+        gap: $sd-base-increment;
+    }
+}
+
+.subnav--dark-blue-grey {
+    --color-text: hsla(214, 13%, 96%, 1);
+    --color-text-light: hsla(214, 13%, 76%, 1);
+    --color-text-lighter: hsla(214, 13%, 56%, 1);
+    --sd-colour-btn-txt-neutral: hsla(214, 13%, 96%, 1);
 }
