--- a/client/components/fields/editor/EventRelatedPlannings/style.scss
+++ b/client/components/fields/editor/EventRelatedPlannings/style.scss
@@ -2,9 +2,9 @@
 
 .related-plannings {
     .planning-item {
-        border: 1px solid var(--color-input-border);
+        border: 1px solid var(--sd-colour-line--x-light);
         border-radius: 2px;
-        background-color: var(--color-bg-50);
+        background-color: var(--sd-colour-panel-bg--100);
         display: flex;
         flex-direction: column;
         margin-bottom: 1.6rem;
@@ -18,8 +18,8 @@
         transition: all 0.3s cubic-bezier(0.55, 0, 0.55, 0.2);
 
         &:focus {
-            border: 1px solid #5ea9c8;
-            box-shadow: 0 0 0 3px rgba(94, 169, 200, 0.3);
+            border: 1px solid var(--sd-colour-interactive);
+            box-shadow: 0 0 0 3px var(--sd-colour-interactive--alpha-30);
         }
     }
 
@@ -33,11 +33,11 @@
     }
 
     .coverage-form {
-        border: 1px solid var(--color-input-border);
+        border: 1px solid var(--sd-colour-line--light);
         border-radius: 2px;
         display: flex;
         flex-direction: column;
-        background-color: var(--color-form-bg);
+        background-color: var(--sd-colour-panel-bg--200);
 
         .sd-list-item-group {
             margin: 0 !important;
@@ -59,19 +59,19 @@
 
         .coverage-form__header {
             padding: 0.8rem 1.6rem;
-            border-bottom: 1px solid var(--color-bg-150);
+            border-bottom: 1px solid var(--sd-colour-line--light);
         }
 
         .coverage-form__body {
             padding: 1.6rem;
-            background-color: var(--color-bg-50);
+            background-color: var(--sd-colour-panel-bg--100);
             display: flex;
             flex-direction: column;
         }
 
         .coverage-form__footer {
             padding: 0.8rem 1.6rem;
-            border-top: 1px solid var(--color-bg-150);
+            border-top: 1px solid var(--sd-colour-line--light);
             display: flex;
         }
     }
