--- a/client/components/UI/ColumnBox/style.scss
+++ b/client/components/UI/ColumnBox/style.scss
@@ -1,5 +1,5 @@
 .sd-column-box--vertical-scroll {
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: hidden;
     height: calc(100vh - 250px);
 }
