--- a/client/styles/index.scss
+++ b/client/styles/index.scss
@@ -77,12 +77,12 @@
   color: $green;
 }
 
-
-.icn-mix__sub-icn.icn-mix__sub-icn--gray {
+.icn-mix {
+  .icn-mix__sub-icn.icn-mix__sub-icn--gray {
     color: var(--color-text-lighter) !important;
     background-color: transparent !important;
+  }
 }
-
 
 .history-list {
   &--no-padding {
