--- a/client/components/Coverages/coverage-icons.scss
+++ b/client/components/Coverages/coverage-icons.scss
@@ -10,11 +10,11 @@
 .coverages-popup__text-light {
     color: var(--color-text-light);
     font-weight: 400;
-    line-height: 14px;
+    line-height: 1.4rem;
 }
 
 .coverages-popup__text-bold {
     color: var(--color-text);
     font-weight: 500;
-    line-height: 14px;
+    line-height: 1.4rem;
 }
