--- a/client/apps/style.scss
+++ b/client/apps/style.scss
@@ -196,7 +196,7 @@ a:hover {
     flex-shrink: 0;
 }
 
-.subnav {
+.subnav.subnav--light {
     container-type: inline-size;
     container-name: subnav;
 }
