Fix: update styles for fix chrome specific issue in monitoring view [SDESK-6963] (#1815)
* update styles for fix chrome specific issue in monitoring view [SDESK-6963]

* update naming convention

--- a/client/apps/style.scss
+++ b/client/apps/style.scss
@@ -196,7 +196,7 @@ a:hover {
     flex-shrink: 0;
 }
 
-.subnav {
+.subnav.subnav-event-planning {
     container-type: inline-size;
     container-name: subnav;
 }
