--- a/client/components/UI/style.scss
+++ b/client/components/UI/style.scss
@@ -1,5 +1,6 @@
 @import '~superdesk-ui-framework/app/styles/_variables.scss';
 @import '~superdesk-ui-framework/app/styles/_mixins.scss';
+@import '~superdesk-ui-framework/app/styles/variables/_colors.scss';
 
 time.Datetime {
     padding-left: 0;
@@ -31,7 +32,14 @@ time.Datetime {
 
 .select__meta-terms {
     .sd-line-input__input {
-        background-color: var(--color-input-bg) !important;
+        background-color: var(--color-input-bg);
+    }
+
+    &.sd-line-input--invalid {
+        .sd-line-input__input {
+            background-color: rgba(228, 27, 37, 0.075);
+            border-color: $red !important;
+        }
     }
 }
 
