[SDESK-7320] fix 3dot menu disappearing

--- a/client/styles/index.scss
+++ b/client/styles/index.scss
@@ -128,3 +128,11 @@
         word-break: break-word;
     }
 }
+
+.sd-list-item-group--space-between-items {
+  .sd-list-item-nested__childs {
+    .sd-list-item {
+      overflow: hidden;
+    }
+  }
+}
