--- a/client/components/Coverages/coverage-icons.scss
+++ b/client/components/Coverages/coverage-icons.scss
@@ -3,7 +3,7 @@
     border-radius: var(--b-radius--medium);
     padding: 1.5rem;
     box-shadow: var(--sd-shadow__dropdown);
-    max-height: 100%;
+    max-height: 400px;
     overflow: auto;
 }
 
