--- a/client/components/SortItems/style.scss
+++ b/client/components/SortItems/style.scss
@@ -12,3 +12,13 @@
 .sortable-list__item button {
     padding: 0px !important;
 }
+
+.sd-list-item-group {
+    padding: 4px 4px 18px 4px;
+}
+
+.sd-list-item-group--space-between-items .sortable-list {
+    display: flex;
+    flex-direction: column;
+    gap: var(--gap--small);
+}
