linking planning & event part 1 (planning item in event)

--- a/client/components/fields/style.scss
+++ b/client/components/fields/style.scss
@@ -48,6 +48,8 @@
 
 .basic-drag-block {
 	transition: all 0.3s cubic-bezier(0.55, 0, 0.55, 0.2);
+	display: flex;
+	justify-content: center;
 
 	&:focus {
 		background-color: var(--color-input-bg--focus);
